# wmq

./: LICENSE
fangzhen/2025RMU_IFR_SIMULATION/: README.md  build.bash
fangzhen/2025RMU_IFR_SIMULATION/my_robot_description/: CMakeLists.txt  package.xml
fangzhen/2025RMU_IFR_SIMULATION/my_robot_description/config/: navigation.yaml
fangzhen/2025RMU_IFR_SIMULATION/my_robot_description/launch/: gazebo_launch.py
fangzhen/2025RMU_IFR_SIMULATION/my_robot_description/log/: latest_build
fangzhen/2025RMU_IFR_SIMULATION/my_robot_description/maps/: 7v7map.pgm  7v7map.yaml
fangzhen/2025RMU_IFR_SIMULATION/my_robot_description/urdf/xacro/gazebo/: my_robot_base_gazebo.urdf  my_robot_base_gazebo.xacro  my_robot_control.xacro  my_robot_with_laser_gazebo.xacro
fangzhen/2025RMU_IFR_SIMULATION/my_robot_description/world/: 2023_v_4_1.world
fangzhen/ifr-ros2-rm/: .ai-commit-prompt  .clangd  .gitignore  README.md  build.bash  frames.gv  wsl.md
fangzhen/ifr-ros2-rm/ifr_pointcloud_to_laserscan/: CMakeLists.txt  package.xml
fangzhen/ifr-ros2-rm/ifr_pointcloud_to_laserscan/include/ifr_pointcloud_to_laserscan/: pointcloud_to_laserscan_node.hpp
fangzhen/ifr-ros2-rm/ifr_pointcloud_to_laserscan/src/: pointcloud_to_laserscan_node.cpp
fangzhen/ifr-ros2-rm/rm_aim_launch/: CMakeLists.txt  README.md  package.xml
fangzhen/ifr-ros2-rm/rm_aim_launch/config/: default.yaml  save_armor.yaml
fangzhen/ifr-ros2-rm/rm_aim_launch/launch/: auto_aim.launch.py  direct_aim.launch.py  save_armor.launch.py  test.py
fangzhen/ifr-ros2-rm/rm_armor_finder/: CMakeLists.txt  README.md  package.xml
fangzhen/ifr-ros2-rm/rm_armor_finder/config/: model.test.yaml
fangzhen/ifr-ros2-rm/rm_armor_finder/include/rm_armor_finder/: Armor.h  ArmorFinder.h  ArmorIdentify.h  ArmorNet.hpp  Cudas.h  DebugPublisher.h  PnP.h  Values.h  helper.h  ippe.hpp  mem_map.h
fangzhen/ifr-ros2-rm/rm_armor_finder/launch/: mlp_test.launch.py
fangzhen/ifr-ros2-rm/rm_armor_finder/model/model-ifr/: model_lg.ifr_model  model_sm.ifr_model
fangzhen/ifr-ros2-rm/rm_armor_finder/model/model-test/: label_lg.txt  label_sm.txt  model_lg.onnx  model_sm.onnx
fangzhen/ifr-ros2-rm/rm_armor_finder/src/: Armor.cpp  ArmorFinder.cpp  ArmorIdentify.cpp  ArmorSaver.cpp  Cudas.cu  DebugPublisher.cpp  PnP.cpp  ippe.cpp
fangzhen/ifr-ros2-rm/rm_armor_processor/: CMakeLists.txt  README.md  package.xml
fangzhen/ifr-ros2-rm/rm_armor_processor/include/rm_armor_processor/: direct_node.h  extended_kalman_filter.hpp  processor_node.hpp  tracker.hpp
fangzhen/ifr-ros2-rm/rm_armor_processor/src/: direct_node.cpp  extended_kalman_filter.cpp  processor_node.cpp  tracker.cpp
fangzhen/ifr-ros2-rm/rm_common/: CMakeLists.txt  README.md  package.xml
fangzhen/ifr-ros2-rm/rm_common/include/rm_common/: defs.h  referee_datas.h
fangzhen/ifr-ros2-rm/rm_fake_referee/: CMakeLists.txt  README.md  package.xml
fangzhen/ifr-ros2-rm/rm_fake_referee/config/: default.yaml
fangzhen/ifr-ros2-rm/rm_fake_referee/launch/: rmul.launch.py
fangzhen/ifr-ros2-rm/rm_fake_referee/src/: node.cpp
fangzhen/ifr-ros2-rm/rm_gimbal_description/: README.md  package.xml
fangzhen/ifr-ros2-rm/rm_gimbal_description/urdf/: rm_2024_HERO_1.xacro  rm_2024_INFANTRY_3.xacro  rm_2024_SENTRY_7.xacro  rm_2024_SENTRY_7_nav.xacro  rm_2024_SENTRY_7_nav_map.xacro  rm_2025_INFANTRY_3.xacro  rm_2025_SENTRY_7_nav.xacro  rm_gimbal.urdf  rm_gimbal.xacro
fangzhen/ifr-ros2-rm/rm_interface/: CMakeLists.txt  README.md  package.xml
fangzhen/ifr-ros2-rm/rm_interface/msg/: RmArmor.msg  RmArmors.msg  RmRobotType.msg  RmTarget.msg  RmTrackerInfo.msg
fangzhen/ifr-ros2-rm/rm_nav2_bringup/: CMakeLists.txt  package.xml
fangzhen/ifr-ros2-rm/rm_nav2_bringup/launch/: navigation_launch.py
fangzhen/ifr-ros2-rm/rm_nav2_bringup/maps/: rm_rmuc_7v7.png.yaml  rm_rmul_3v3.png.yaml
fangzhen/ifr-ros2-rm/rm_nav2_bringup/params/: nav2_params.yaml
fangzhen/ifr-ros2-rm/rm_referee_interface/: CMakeLists.txt  README.md  package.xml
fangzhen/ifr-ros2-rm/rm_referee_interface/include/rm_referee_interface/: all.hpp
fangzhen/ifr-ros2-rm/rm_referee_interface/msg/: Buff.msg  BulletRemaining.msg  EventData.msg  GameResult.msg  GameRobotHP.msg  GameRobotStatus.msg  GameStatus.msg  RobotHurt.msg  SentryInfo.msg  ShootData.msg
fangzhen/ifr-ros2-rm/rm_sentry_ai/: CMakeLists.txt  README.md  bt_nodes.xml  package.xml
fangzhen/ifr-ros2-rm/rm_sentry_ai/launch/: bt.launch.py  export_bt_xml.launch.py
fangzhen/ifr-ros2-rm/rm_sentry_ai/src/: export_bt_xml.cpp  node.cpp
fangzhen/ifr-ros2-rm/rm_sentry_ai/trees/: RMUL2024.btproj  S_yuanlu.xml  bt_test.xml  root.xml  wait.xml
fangzhen/ifr-ros2-rm/rm_sentry_launch/: CMakeLists.txt  README.md  package.xml
fangzhen/ifr-ros2-rm/rm_sentry_launch/config/: MID360_config.json  fast_lio_mid360.yaml  slam_toolbox.yaml
fangzhen/ifr-ros2-rm/rm_sentry_launch/launch/: auto_aim.launch.py  dll.launch.py  fast_lio.launch.py  imu_filter.launch.py  livox_ros_driver.launch.py  localizer_launch.py  nav2.launch.py  pc2scan.launch.py  sentry.launch.py  slam_toolbox.py
fangzhen/ifr-ros2-rm/rm_sentry_launch/reloc_map/: RMUL.bt
fangzhen/ifr-ros2-rm/rm_serial_port/: CMakeLists.txt  README.md  package.xml
fangzhen/ifr-ros2-rm/rm_serial_port/include/rm_serial_port/: SerialPort.h  SerialPortFullCtrl.h  SerialPortMotor.h  TargetCalc.h  packet.h
fangzhen/ifr-ros2-rm/rm_serial_port/launch/: coordinate_display.py  test.py
fangzhen/ifr-ros2-rm/rm_serial_port/lib/serial/: CMakeLists.txt
fangzhen/ifr-ros2-rm/rm_serial_port/src/: CoordinateDisplay.cpp  SerialPort.cpp  SerialPortFullCtrl.cpp  SerialPortMotor.cpp  TargetCalc.cpp
fangzhen/ifr-ros2-rm/tools/: file_header.py
fangzhen/ifr-ros2-sentry-lib/: README.md  build.bash  init.bash
fangzhen/ifr-ros2-sentry-lib/Livox-SDK2/: build.bash
fangzhen/ifr-ros2-sentry-lib/laser_to_foot/: CMakeLists.txt  package.xml
fangzhen/ifr-ros2-sentry-lib/laser_to_foot/pcd_save/: map_1745106215181.pcd  ncut_zoulang.pcd
fangzhen/ifr-ros2-sentry-lib/laser_to_foot/src/: node.cpp
fangzhen/ifr-ros2-sentry-lib/livox_ros_driver2/: CMakeLists.txt
git_test/: text.txt
(+42 files in other folders)
