<?xml version="1.0"?>
<package format="3">
  <name>my_robot_description</name>
  <version>0.0.1</version>
  <description>The my_robot_description package</description>

  <!-- 维护者信息 -->
  <maintainer email="hcx@todo.todo">hcx</maintainer>

  <!-- License 信息 -->
  <license>BSD</license>

  <!-- 依赖项 -->
  <!-- ROS 2 使用 ament_cmake 作为构建工具 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 运行时和构建时的依赖 -->
  <depend>urdf</depend>
  <depend>xacro</depend>

  <!-- Export 依赖项 -->
  <export>
    <!-- 为了让ROS 2工具能够识别包 -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
