<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rm_gimbal_description</name>
  <version>0.0.1</version>
  <description>NCUT DreamTeam RoboMaster ROS2 Package: Gimbal Description</description>
  <maintainer email="2573580691@qq.com">yuanlu</maintainer>
  <license>AGPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch_ros</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
