<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>rm_referee_interface</name>
    <version>0.0.1</version>
    <description>NCUT DreamTeam ROS2 Package: RoboMaster Referee System Interfaces</description>
    <maintainer email="2573580691@qq.com">yuanlu</maintainer>
    <license>AGPLv3</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>rosidl_default_generators</build_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>

    <depend>std_msgs</depend>
    <depend>rclcpp</depend> 
    <depend>rclcpp_components</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>visualization_msgs</depend>
    <depend>message_filters</depend>
    <depend>cv_bridge</depend>
    <depend>image_transport</depend>
    <depend>image_transport_plugins</depend>
    <depend>vision_opencv</depend>
    <depend>tf2</depend>
    <depend>ament_index_cpp</depend>
    <depend>rclcpp_action</depend>
    <depend>camera_info_manager</depend>
    <depend>builtin_interfaces</depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>